--- a/Conference/references.bib
+++ b/Conference/references.bib
@@ -27,7 +27,7 @@
 	booktitle={Proceedings of the 5th ACM/IEEE international conference on Human-robot interaction},
 	pages={187--188},
 	year={2010},
-	organization={IEEE Press}
+	organization={IEEE}
 }
 
 @inproceedings{volosyak2005rehabilitation,
@@ -42,7 +42,7 @@
 @inproceedings{tsui2008development,
 	title={Development and evaluation of a flexible interface for a wheelchair mounted robotic arm},
 	author={Tsui, Katherine and Yanco, Holly and Kontak, David and Beliveau, Linda},
-	booktitle={Proceedings of the 3rd ACM/IEEE international conference on Human robot interaction},
+	booktitle={Proceedings of the 3rd ACM/IEEE International Conference on Human Robot Interaction},
 	pages={105--112},
 	year={2008},
 	organization={ACM}
@@ -51,7 +51,7 @@
 @inproceedings{herlant2016assistive,
 	title={Assistive Teleoperation of Robot Arms via Automatic Time-Optimal Mode Switching},
 	author={Herlant, Laura V and Holladay, Rachel M and Srinivasa, Siddhartha S},
-	booktitle={The Eleventh ACM/IEEE International Conference on Human--Robot Interaction (HRI)},
+	booktitle={The 11th ACM/IEEE International Conference on Human--Robot Interaction (HRI)},
 	pages={35--42},
 	year={2016},
 	organization={IEEE}
@@ -81,7 +81,7 @@
 @inproceedings{nuttin2002selection,
 	title={Selection of suitable human-robot interaction techniques for intelligent wheelchairs},
 	author={Nuttin, Marnix and Vanhooydonck, Dirk and Demeester, Eric and Van Brussel, Hendrik},
-	booktitle={Robot and Human Interactive Communication, 2002. Proceedings. 11th IEEE International Workshop on},
+	booktitle={Proceedings of the 11th IEEE International Workshop on Robot and Human Interactive Communication, 2002.},
 	pages={146--151},
 	year={2002},
 	organization={IEEE}
@@ -89,7 +89,7 @@
 @inproceedings{choi2008laser,
 	title={Laser pointers and a touch screen: intuitive interfaces for autonomous mobile manipulation for the motor impaired},
 	author={Choi, Young Sang and Anderson, Cressel D and Glass, Jonathan D and Kemp, Charles C},
-	booktitle={Proceedings of the 10th international ACM SIGACCESS conference on Computers and accessibility},
+	booktitle={Proceedings of the 10th International ACM SIGACCESS Conference on Computers and accessibility},
 	pages={225--232},
 	year={2008},
 	organization={ACM}
