--- a/Conference_Final/references.bib
+++ b/Conference_Final/references.bib
@@ -21,6 +21,24 @@
   year={1960},
   publisher={Citeseer}
 }
+@inproceedings{miller2013trajectory,
+	title={Trajectory optimization for continuous ergodic exploration},
+	author={Miller, Lauren M and Murphey, Todd D},
+	booktitle={American Control Conference (ACC), 2013},
+	pages={4196--4201},
+	year={2013},
+	organization={IEEE}
+}
+@article{miller2016ergodic,
+	title={Ergodic exploration of distributed information},
+	author={Miller, Lauren M and Silverman, Yonatan and MacIver, Malcolm A and Murphey, Todd D},
+	journal={IEEE Transactions on Robotics},
+	volume={32},
+	number={1},
+	pages={36--52},
+	year={2016},
+	publisher={IEEE}
+}
 @inproceedings{goodfellow2010help,
 	title={Help me help you: Interfaces for personal robots},
 	author={Goodfellow, Ian J and Koenig, Nate and Muja, Marius and Pantofaru, Caroline and Sorokin, Alexander and Takayama, Leila},
